# xiaozhi-openclaw-adapter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README_zh.md  pyproject.toml  pytest.ini  setup.py
skill/: openclaw-plugin-sdk.d.ts  openclaw.plugin.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
skill/src/: index.ts  runtime.ts  types.ts
skill/src/client/: protocol.ts  websocket.ts
skill/src/config/: schema.ts  types.ts
skill/src/tools/: agent-task.ts  device-control.ts  index.ts  list-devices.ts  send-message.ts
xiaozhi_openclaw/: __init__.py  config.py  executor.py  protocol.py  tool_executor.py  websocket_server.py
xiaozhi_openclaw/tests/: __init__.py  test_config.py  test_protocol.py  test_tool_executor.py
xiaozhi_openclaw/tools/: __init__.py  agent_task.py  device_control.py  send_message.py
